# agentconvos

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-summaries-and-tree.md
docs/superpowers/specs/: 2026-05-07-summaries-and-tree-design.md
src/agentconvos/: app.py  scanner.py
src/cc_convo_explorer/: app.py  parser.py  scanner.py  summarize.py
src/convo_explorer/: analyzer.py  app.py  parser.py  scanner.py
src/convolog/: __init__.py  app.py
tests/: test_app.py
