[project]
name = "convo-explorer"
version = "0.1.0"
description = "TUI for browsing and analyzing Claude Code conversations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
]

[project.optional-dependencies]
ai = ["google-genai>=1.0"]

[project.scripts]
convo-explorer = "convo_explorer.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convo_explorer"]
